@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-Plugin-Git-FilePermissions
 
 {{$NEXT}}
 
+  - Added a default argument to specify default permissions
+
 0.002  2017-10-16 21:46:46 UTC
 
   - Fix the tests for Windows
